# hera-internal-platform-demo

./: README.md
hera-template/{{cookiecutter.name}}/: pyproject.toml
